--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
-version: "2.32.1"
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfıle
     env_file:
-      - SanalAjanda/docker.env
+      - sanalAjanda/docker.env
+    volumes:
+      - .:/srv/app
     ports:
       - "0.0.0.0:8000:8000"
     command: python manage.py runserver 0.0.0.0:8000
