--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - "postgresql-data:/var/lib/postgresql/data"
+      - postgresql-data:/var/lib/postgresql/data
     command: -p 5432
   app:
     build:
@@ -23,4 +23,5 @@ services:
     command: python manage.py runserver 0.0.0.0:8080
 
 volumes:
+  postgresql-data:
   static-data:
