--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     volumes:
       - .:/srv/app
     ports:
-      - "8080:8080"
-    command: python manage.py runserver 0.0.0.0:8080
+      - "0.0.0.0:8080:8080"
+    command: gunicorn sanalAjanda.wsgi:application --bind 0.0.0.0:8080
 
 volumes:
   postgresql-data:
