--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ server{
     server_tokens off;
     client_max_body_size 15M;
     location / {
-    proxy_pass http://sanalajanda.com;
+    proxy_pass http://sanalajanda;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
