--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - .:/srv/app
     ports:
       - "0.0.0.0:8080:8080"
-    command: gunicorn sanalAjanda.wsgi:application --bind 0.0.0.0:8080
+    command: gunicorn --timeout 60 --workers 4 sanalAjanda.wsgi:application --bind 0.0.0.0:8080
   nginx:
     build:
       context: ./nginx
