--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,18 @@ services:
       - app
     ports:
       - 80:80
+      - 443:443
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+  certbot:
+    image: certbot/certbot:latest
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email ajandanotdefteri@gmail.com -d sanalajanda.com -d www.sanalajanda.com --agree-tos
 
 
 volumes:
