--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,4 +14,7 @@ server{
         proxy_set_header Host $host;
         proxy_redirect off;
     }
+    location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+    }
 }
