--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,4 +17,26 @@ server{
     location ~ /.well-known/acme-challenge/ {
             root /var/www/certbot;
     }
+
 }
+server {
+        listen 443 ssl http2;
+        # use the certificates
+        ssl_certificate     /etc/letsencrypt/live/sanalajanda.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/sanalajanda.com/privkey.pem;
+        server_name www.sanalajanda.com sanalajanda.com;
+        root /var/www/html;
+        index index.html;
+
+
+        location / {
+        proxy_pass http://sanalajanda;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+    }
