--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,25 +8,37 @@ server{
     server_name www.sanalajanda.com sanalajanda.com;
     server_tokens off;
     client_max_body_size 15M;
+
     location / {
-        proxy_pass http://sanalajanda;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-    location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;
+        return 302 https://$host$request_uri;
     }
 
-}
+   }
 server {
         listen 443 ssl http2;
+        server_tokens off;
+        client_max_body_size 15M;
         # use the certificates
         ssl_certificate     /etc/letsencrypt/live/sanalajanda.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/sanalajanda.com/privkey.pem;
+        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers         HIGH:!aNULL:!MD5;
+
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
         server_name www.sanalajanda.com sanalajanda.com;
-        root /var/www/html;
-        index index.html;
+
+        location /.well-known {
+        alias /var/www/cert/.well-known;
+        }
+
+        root /home/dmry/SanalAjanda;  # root /home/baris/eventhub
+
+        location /static/ {
+        }
+
+        location /media/ {
+        }
 
 
         location / {
