--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - .:/srv/app
     ports:
       - "0.0.0.0:8080:8080"
-    command: gunicorn --timeout 60 --workers 4 sanalAjanda.wsgi:application --bind 0.0.0.0:8080
+    command: gunicorn --workers 4 --timeout 60 --bind 0.0.0.0:8080 sanalAjanda.wsgi:application
   nginx:
     build:
       context: ./nginx
@@ -43,6 +43,10 @@ services:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     command: certonly --webroot -w /var/www/certbot --force-renewal --email ajandanotdefteri@gmail.com -d sanalajanda.com -d www.sanalajanda.com --agree-tos
+    entrypoint:
+      - /bin/sh
+      - -c
+      - "trap exit TERM; while :; do certbot renew && sleep 10h & wait $${!}; done;"
 
 
 volumes:
