--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,44 +7,49 @@ server{
     listen 80;
     server_name www.sanalajanda.com sanalajanda.com;
     server_tokens off;
-    client_max_body_size 15M;
+    client_max_body_size 25M;
 
     location / {
-        return 302 https://$host$request_uri;
+        return 301 https://$host$request_uri;
     }
 
    }
 server {
         listen 443 ssl http2;
+        server_name www.sanalajanda.com sanalajanda.com;
         server_tokens off;
-        client_max_body_size 15M;
+        client_max_body_size 25M;
         # use the certificates
         ssl_certificate     /etc/letsencrypt/live/sanalajanda.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/sanalajanda.com/privkey.pem;
-        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers         HIGH:!aNULL:!MD5;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5:!3DES;
+        ssl_prefer_server_ciphers on;
 
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
-        server_name www.sanalajanda.com sanalajanda.com;
 
         location /.well-known {
         alias /var/www/cert/.well-known;
         }
 
-        root /home/dmry/SanalAjanda;  # root /home/baris/eventhub
+        root /home/dmry/SanalAjanda;
 
         location /static/ {
+        alias /home/dmry/SanalAjanda/staticfiles/;
         }
 
         location /media/ {
-        }
+        alias /home/dmry/SanalAjanda/media/;
+           }
 
 
         location / {
         proxy_pass http://sanalajanda;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_redirect off;
     }
 
