--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ server{
 
    }
 server {
-        listen 443 ssl http2;
+        listen 443 ssl;
         server_name www.sanalajanda.com sanalajanda.com;
         server_tokens off;
         client_max_body_size 25M;
